# AutoMW

./: CMakeLists.txt
core/: CMakeLists.txt  automw_mq.c  automw_mq.h  automw_shm.c  automw_shm.h
demo/: CMakeLists.txt  CMakelists.txt  client.c  publisher.c  server.c  someip_client.c  someip_event_sub.c  someip_notifier.c  someip_server.c  subscriber.c
someip/: CMakeLists.txt
someip/include/: someip.h  someip_sd.h
someip/src/: someip.c  someip_sd.c
